ft_containers-unit-test/logs.txt
../map_tests/at().cpp:27:24: error: no member named 'at' in 'ft::Map<int, int, std::__1::less<int>, std::__1::allocator<ft::Pair<const int, int> > >'
        v.push_back(mp.at(40 * _ratio));
                    ~~ ^
../map_tests/at().cpp:38:55: note: in instantiation of function template specialization 'at_test<int, int>' requested here
    exit(run_map_unit_test<int, int>("at()", at_test, at_test));
                                                      ^
../map_tests/at().cpp:28:24: error: no member named 'at' in 'ft::Map<int, int, std::__1::less<int>, std::__1::allocator<ft::Pair<const int, int> > >'
        v.push_back(mp.at(40 * _ratio + 1));
                    ~~ ^
2 errors generated.
.hpp:119:28: note: candidate function not viable: requires single argument 'value', but 2 arguments were provided
  ft::Pair<iterator, bool> insert(const value_type& value) {
                           ^
1 error generated.
rs generated.
